[package]
name = "wedit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
app_units = "0.7.1"
euclid = "0.22.7"
gleam = "0.13"
glutin = "0.29.1"
rustybuzz = "0.5.1"
ttf-parser = "0.17.1"
webrender = { git = "https://github.com/servo/webrender.git", rev = "2756e7e1fb368ba35d4ca24e4e7994d411fd8f8c" }
webrender_api = { git = "https://github.com/servo/webrender.git", rev = "2756e7e1fb368ba35d4ca24e4e7994d411fd8f8c" }
winit = "0.27.4"
