[package]
name = "wedit"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
app_units = "0.7.8"
euclid = "0.22.11"
gleam = "0.15.1"
glutin = "0.32.3"
glutin-winit = "0.5.0"
rustybuzz = "0.20.1"
ttf-parser = "0.25.1"
webrender = { git = "https://github.com/servo/webrender.git", rev = "c4bd5b47d8f5cd684334b445e67a1f945d106848" }
webrender_api = { git = "https://github.com/servo/webrender.git", rev = "c4bd5b47d8f5cd684334b445e67a1f945d106848" }
winit = "0.30.12"
